--- a/my-yt/src/Components/PlayVideo/PlayVideo.css
+++ b/my-yt/src/Components/PlayVideo/PlayVideo.css
@@ -146,3 +146,21 @@
      margin-right: 20px;
      color:#5a5a5a ;
  }
+
+ @media (max-width:900px){
+     .play-video{
+         max-width: 100%;
+     }
+     .play-video .iframe {
+         width: 100%;
+         height: 50vw;
+     }
+     .vid-description{
+        padding-left: 0;
+     }
+     .play-video .play-video-info span{
+        margin-left: 0;
+        margin-right: 50px;
+        margin-top: 15px;
+     }
+ }
