--- a/my-yt/src/Pages/Home/Home.css
+++ b/my-yt/src/Pages/Home/Home.css
@@ -9,3 +9,10 @@
 .large-container {
     padding-left: 7%;
 }
+
+@media (max-width: 900px) {
+    .container {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+}
